# csc231-game

./: .clang-format  CMakeLists.txt  README.md  main.cpp  settings.txt
assets/: items.txt  sounds.txt
content/: CMakeLists.txt
content/actions/: CMakeLists.txt  attack.cpp  attack.h  closedoor.cpp  closedoor.h  move.cpp  move.h  opendoor.cpp  opendoor.h  rest.cpp  rest.h  wander.cpp  wander.h
content/entities/: CMakeLists.txt  heroes.cpp  heroes.h  monsters.cpp  monsters.h
content/events/: CMakeLists.txt  animation.cpp  animation.h  conjure.cpp  conjure.h  die.cpp  die.h  drop.cpp  drop.h  heal.cpp  heal.h  hit.cpp  hit.h  sound.cpp  sound.h  swing.cpp  swing.h  thrust.cpp  thrust.h
content/items/: CMakeLists.txt  axe.cpp  axe.h  bite.cpp  bite.h  coin.cpp  coin.h  potion_red.cpp  potion_red.h  staff_green.cpp  staff_green.h  staff_red.cpp  staff_red.h  sword.cpp  sword.h
engine/: CMakeLists.txt  action.h  camera.cpp  camera.h  engine.cpp  engine.h  entities.cpp  entities.h  entity.cpp  entity.h  event.h  events.cpp  events.h  item.cpp  item.h  settings.cpp  settings.h  weapon.cpp  weapon.h
engine/audio/: audio.cpp
engine/dungeon/: builder.cpp  builder.h  decorator.cpp  decorator.h  door.cpp  door.h  dungeon.cpp  dungeon.h  fog.cpp  fov.cpp  fov.h  pathfinding.cpp  tile.cpp  tile.h
engine/graphics/: CMakeLists.txt  animatedsprite.cpp  animatedsprite.h  graphics.cpp  graphics.h  sprite.h
engine/input/: input.cpp  input.h
engine/util/: grid.h  randomness.cpp  vec.cpp  vec.h
